--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -63,9 +63,26 @@ header{
     margin: 20px 30px 20px 30px
 }
 
-
-
-
+#post_title {
+    width:100%;
+    padding: 10px;
+    font-size: 12px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border: 1px solid rgb(0, 123, 246); 
+}
+#post_content{
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    font-size: 12px;
+    margin: 8px 0;
+    border: none;
+    resize: none;
+    box-sizing: border-box;
+    border: 1px solid rgb(0, 123, 246);
+}
 
 // Flashes
 .flashes {
